--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
+/* Container Styles */
+.main {
+    width: 200px;
+    background-color: purple;
+    border-left: 5px solid green;
+    padding: 10px;
+}
 
-/* Your CSS Code here. */
+/* Heading Styles */
+.heading {
+    font-size: 20px;
+    color: white;
+    text-decoration: underline;
+}
